force-app/main/default/objects/Call_Recommendation__c/Call_Recommendation__c.object-meta.xml
<CustomObject>
    <label>Call Recommendation</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Recommendation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Recommendations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>