force-app/main/default/objects/Call_Recommendation__c/fields/Action_Config_JSON__c.field-meta.xml
<CustomField>
    <fullName>Action_Config_JSON__c</fullName>
    <label>Action Configuration</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>