force-app/main/default/objects/Call_Recommendation__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create Task</fullName>
            </value>
            <value>
                <fullName>Create Opportunity</fullName>
            </value>
            <value>
                <fullName>Update Opportunity</fullName>
            </value>
            <value>
                <fullName>Create Event</fullName>
            </value>
            <value>
                <fullName>Log Follow-Up Call</fullName>
            </value>
            <value>
                <fullName>Update Competitor</fullName>
            </value>
            <value>
                <fullName>Create Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>