force-app/main/default/objects/Call_Recommendation__c/fields/Demo_Video_Call__c.field-meta.xml
<CustomField>
    <fullName>Demo_Video_Call__c</fullName>
    <label>Demo Video Call</label>
    <referenceTo>Demo_Video_Call__c</referenceTo>
    <relationshipLabel>Call Recommendations</relationshipLabel>
    <relationshipName>Call_Recommendations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>