force-app/main/default/objects/Call_Recommendation__c/fields/Recommendation_Detail__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Detail__c</fullName>
    <label>Recommendation Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>