force-app/main/default/objects/Call_Recommendation__c/fields/Recommendation_Title__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Title__c</fullName>
    <label>Recommendation Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>